--- a/css/layout.css
+++ b/css/layout.css
@@ -21,12 +21,17 @@ input {
 #alster {
 	border: 2px solid black;
 	width: 455px;
+	background: white;
 }
-#alsterPhotoFrame {
+#alsterPhotoFrameBorder {
+	border: 3px solid black;
 	width: 400px;
 	height: 260px;
-	border: 3px solid black;
 	margin: 25px;
+}
+#alsterPhotoFrame {
+	width: 100%;
+	height: 100%;
 	overflow: hidden;
 }
 #alsterQuoteFrame {
@@ -54,4 +59,7 @@ input {
 	margin-left: 25px;
 	width: 392px;
 	min-height: 99px;
+}
+.activeArea {
+	background: rgba(200,200,200,0.7);
 }
