--- a/css/layout.css
+++ b/css/layout.css
@@ -2,6 +2,8 @@ h3 {
 	font-size: 18px;
 	padding: 7px 0 0 0;
 	margin: 0;
+	display: block;
+	clear: both;
 }
 input {
 	width: 175px;
@@ -64,3 +66,10 @@ input {
 .activeArea {
 	background: rgba(200,200,200,0.7);
 }
+#map {
+	width: 840px;
+	height: 470px;
+	border: 3px solid black;
+}
+#map label { width: auto; display:inline; }
+#map img { max-width: none; }
