--- a/css/layout.css
+++ b/css/layout.css
@@ -40,12 +40,13 @@ input {
 	width: 400px;
 	height: 260px;
 	margin: 25px;
-	overflow: hidden;
+	overflow: hidden; /* hidden on both border and frame */
 }
 #alsterPhotoFrame {
 	width: 100%;
 	height: 100%;
 	cursor: move;
+	overflow: hidden; /* hidden on both border and frame */
 }
 #alsterQuoteFrame {
 	width: 400px;
@@ -153,4 +154,9 @@ input {
 	float: left;
 	width: 100%;
 	margin-bottom: 5px;
+}
+#createButton {
+	display: block;
+	width: 270px;
+	margin: 79px 0 19px 0;
 }
