--- a/css/share.css
+++ b/css/share.css
@@ -1,6 +1,6 @@
 body {
 	background: gray;
-	font-family: verdana, sans-serif;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	color: #eee;
 	background: #5f5f5f;
 }
@@ -8,18 +8,6 @@ html {
 	background: #5f5f5f;
 }
 
-#header {
-  	background: #353535;
-  	height: 45px;
-	min-width: 960px;
-  	padding: 10px;
-  	font-size: 16px;
-  	line-height: 1.3em;
-
-  	-webkit-box-shadow: 0 3px 3px #454545;
-	-moz-box-shadow: 0 3px 3px #454545;
-	box-shadow: 0 3px 3px #454545;
-}
 a, a:link, a:hover, a:active, a:visited {
 	color: white;
 	text-decoration: none;
