--- a/css/layout.css
+++ b/css/layout.css
@@ -164,6 +164,14 @@ input {
 #showMore {
 	display: block;
 	margin: 20px 0;
+	opacity: 0.4;
+	-moz-opacity: 0.4;
+}
+#showMore:hover{
+	display: block;
+	margin: 20px 0;
+	opacity: 1;
+	-moz-opacity: 1;
 }
 #showMore button {
 	width: 200px;
