--- a/css/share.css
+++ b/css/share.css
@@ -144,6 +144,7 @@ p {
 #fb-commentsContainer {
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 20px;
 	width: 100%;
 	text-align: center;
 }
